rectified scroll bug on mobile screen

--- a/src/mediaQueries.css
+++ b/src/mediaQueries.css
@@ -18,11 +18,13 @@
     .sidebar{
         position: absolute;
         width: 10%;
+        height: 100vh;
         z-index: 1234568765432;
         left: 0px;
     }
     .rightbar{
         width: 100%;
+        height: 100vh;
         padding: 0;
         justify-content: flex-start;
         gap: 0;
